fix: broken css

--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -7,7 +7,7 @@
 }
 h1 {
   color: black;
-}
+} 
 
 .imageDiv {
   overflow-y: hidden;
@@ -72,25 +72,24 @@ b {
   outline: none;
   border: none;
   padding: 15px;
+  margin-left: 3rem;
 }
 
 .loginForm1 {
-  height: 550px;
+  height: 520px;
   background-color: rgba(255, 255, 255, 0.23);
   position: absolute;
   transform: translate(-50%, -50%);
   top: 50%;
-  left: 70%;
+  left: 20%;
   border-radius: 10px;
   backdrop-filter: blur(10px);
   border: 2px solid rgba(255, 255, 255, 0.1);
   box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
   padding: 50px 35px;
   z-index: 999;
-}
-
-.loginForm1 {
-  width: 600px;
+  margin-left: 40rem;
+  width: 500px;
   font-family: "Poppins", sans-serif;
   color: black;
   letter-spacing: 0.5px;
@@ -153,6 +152,7 @@ label {
   cursor: pointer;
   border: none;
   margin-bottom: 5%;
+  margin-left: 0px;
 }
 
 .googleLogin img {
